# Fpl-toolkit

./: .dockerignore  .env.example  .gitignore  Dockerfile  ENHANCEMENTS.md  ENHANCEMENT_SUMMARY.md  FINAL_SUMMARY.md  LICENSE  PLOTLY_INTEGRATION.md  README.md  SUCCESS_SUMMARY.md  extensions.txt  fpl-toolkit.code-workspace  fpl_toolkit.db  mobile_demo.py  mobile_preview.html  mobile_ui_mockup.py  pyproject.toml  render.yaml  streamlit_app.py  streamlit_app_enhanced.py  streamlit_app_enhanced_v2.py  streamlit_app_fixed.py  streamlit_app_modern.py  test_enhancements.py  vscodeconfig.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml
Documentation/: AI-Tools.md  API-Reference.md  Analysis-Summary.md  Best-Practices.md  CLI-Reference.md  Data-Sources.md  Deployment.md  Features.md  Quick-Start.md  README.md  Roadmap.md  Setup-Installation.md  Technical-Stack.md  Troubleshooting.md
data/: xgxa_sample.json  zone_weakness.sample.json  zone_weakness_sample.json
docs/: analysis_methods.md  api_reference.md
frontend/: Dockerfile  README.md  next.config.js  package-lock.json  package.json  tailwind.config.js  vercel.json
frontend/public/: manifest.json  robots.txt
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/team-analysis/: page.tsx
frontend/src/lib/: api.ts  utils.ts
frontend/src/types/: fpl.ts
scripts/: quick-setup.sh  setup.sh
src/fpl_toolkit/: __init__.py  cli.py
src/fpl_toolkit/ai/: __init__.py  advisor.py  scenario_planner.py
src/fpl_toolkit/analysis/: __init__.py  advanced_analysis.py  advanced_metrics.py  decisions.py  fixtures.py  projections.py
src/fpl_toolkit/api/: __init__.py  client.py
src/fpl_toolkit/db/: __init__.py  engine.py  enhanced_models.py  models.py  repository.py
src/fpl_toolkit/service/: __init__.py  api.py  team_endpoints.py
src/fpl_toolkit/ui/: pitch_components.py
tests/: test_advanced_breakdown.py  test_ai_advisor.py  test_api_endpoints.py  test_db_engine.py  test_decision_support.py  test_fixture_difficulty.py  test_health.py  test_team_endpoints.py
